# rest/src/main/resources/api/prices-openapi.yaml
@@ -48,6 +48,11 @@ paths:
                 $ref: '#/components/schemas/ProductPriceResponse'
         '400':
           description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiErrorResponse'
+
         '404':
           description: Not found
 components:
@@ -80,6 +85,28 @@ components:
           pattern: ^[a-z]{3}$
           minLength: 3
           maxLength: 3
+    ApiErrorResponse:
+      type: object
+      properties:
+        timestamp:
+          type: string
+          format: date-time
+        status:
+          type: integer
+          format: int32
+        error:
+          type: string
+        path:
+          type: string
+        message:
+          type: string
+      required:
+        - timestamp
+        - status
+        - error
+        - path
+        - message
+
 
 
 
